source activate command need to be run in bash

--- a/templates/usr/local/bin/run-jupyter-notebook.sh.j2
+++ b/templates/usr/local/bin/run-jupyter-notebook.sh.j2
@@ -1,4 +1,4 @@
-#!/usr/bin/env sh
+#!/usr/bin/env bash
 
 {% if jupyter_default_conda_env is defined %}source activate {{ jupyter_default_conda_env }}{% endif %}
 
