--- a/templates/usr/local/bin/run-jupyter-notebook.sh.j2
+++ b/templates/usr/local/bin/run-jupyter-notebook.sh.j2
@@ -1,8 +1,11 @@
 #!/usr/bin/env bash
 
-{% if jupyter_default_conda_env is defined %}source activate {{ jupyter_default_conda_env }}{% endif %}
+{% if jupyter_supervisord_conda_env is defined %}
+source activate {{jupyter_supervisord_conda_env}}
+{% endif %}
 
-/opt/anaconda/bin/jupyter notebook \
-	--config={{ jupyter_config_dir }}/{{ jupyter_profile_name }}_notebook_config.py \
-	--Session.username={{ jupyter_supervisord_username | default('root') }} \
-	--NotebookApp.notebook_dir={{ jupyter_supervisord_notebook_dir | default(jupyter_config_dir) }}
+{{jupyter_supervisord_bin_dir}}/jupyter \
+    notebook \
+    --config={{jupyter_supervisord_profile_py}} \
+    --Session.username={{jupyter_supervisord_username}} \
+    --NotebookApp.notebook_dir={{jupyter_supervisord_config_dir}}
