--- a/templates/usr/local/bin/run-jupyter-notebook.sh.j2
+++ b/templates/usr/local/bin/run-jupyter-notebook.sh.j2
@@ -6,4 +6,4 @@ source activate {{jupyter_supervisord_name}}
 
 jupyter notebook \
 	--config={{jupyter_supervisord_profile_py}} \
-	--Session.username={{jupyter_supervisord_username}} \
+	--Session.username={{jupyter_supervisord_username}}
