Support loading environment files in shell running jupyter notebook

--- a/templates/usr/local/bin/run-jupyter-notebook.sh.j2
+++ b/templates/usr/local/bin/run-jupyter-notebook.sh.j2
@@ -2,6 +2,10 @@
 
 source activate {{jupyter_supervisord_name}}
 
+{% for env_file in jupyter_supervisord_env_files|default([]) %}
+source {{env_file}}
+{% endfor %}
+
 jupyter notebook \
 	--config={{jupyter_supervisord_profile_py}} \
 	--Session.username={{jupyter_supervisord_username}} {% if jupyter_supervisord_notebook_dir is defined %} \
