--- a/templates/run-jupyter-notebook.sh.j2
+++ b/templates/run-jupyter-notebook.sh.j2
@@ -8,5 +8,5 @@ source {{env_file}}
 
 jupyter notebook \
 	--config={{jupyter_supervisord_profile_py}} \
-	--Session.username={{jupyter_supervisord_username}} {% if jupyter_supervisord_notebook_dir is defined %} \
-	--NotebookApp.notebook_dir={{jupyter_supervisord_notebook_dir}} {% endif %}
+	--Session.username={{jupyter_supervisord_username}} \
+	{{jupyter_supervisord_eff_notebook_dir}}
